--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 						<h1>XpertModel</h1>
 						<p>Scientific modeling and data analysis consultancy</p>
 						<!-- <br />
-						DATA ANALYTICS, BIOINFORMATICS, STATISTICS, DATA VISUALIZATION -->
-						<!-- MOLECULAR BIOLOGY, GENETICS, EPIGENETICS, ECOLOGY</p> -->
+						more text</p> -->
 					</header>
 
 				<!-- Nav -->
@@ -43,10 +42,10 @@
 										<header class="major">
 											<h2>Services</h2>
 										</header>
-										<p>DATA ANALYTICS, BIOINFORMATICS, STATISTICS, DATA VISUALIZATION,
-										MOLECULAR BIOLOGY, GENETICS, EPIGENETICS, ECOLOGY</p>
+										<p>Data analysis, Statistical analysis, Data visualization,
+										 Population genetics, Evolutionary biology, Ecology, Bioinformatics</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="services.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -122,30 +121,29 @@
 							<section id="contact" class="main special">
 								<header class="major">
 									<h2>Contact</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>We are happy to reply back quickly through <a href="#"> EMAIL </a>, <a href="#"> Telegram chat </a>, or <a href="#"> Whatsapp </a>.</p>
 								</header>
-								<footer class="major">
+								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<h2>Aliquam sed mauris</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
-						</section>
+						</section> -->
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Where to find us</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
@@ -155,14 +153,14 @@
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+								<li><a href="#" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; XpertModel.</p>
 					</footer>
 
 			</div>
