--- a/index.html
+++ b/index.html
@@ -61,12 +61,18 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Ali R. Vahdati, PhD</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>leads our modeling and analytics department, leveraging a decade of experience in complex dynamical systems, genomic data analysis, and both deterministic and probabilistic modeling to provide precise, actionable insights from each data set.</p>
+										<ul class="actions fit small">
+											<li><a href="https://vahdati.info" target="_blank" class="button primary fit">More about Ali</a></li>
+										</ul>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Carlos C. Melian, PhD</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>serving as our statistics and modeling advisor, provides crucial expertise in experimental design and teaching, ensuring that our data-driven methodologies are strategically aligned and our educational programs are comprehensively structured. </p>
+										<ul class="actions fit small">
+											<li><a href="https://scholar.google.com/citations?user=rhHQRswAAAAJ" target="_blank" class="button primary fit">More about Carlos</a></li>
+										</ul>
 									</li>
 									<!-- <li>
 										<span class="icon major style5 fa-gem"></span>
@@ -74,11 +80,11 @@
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li> -->
 								</ul>
-								<footer class="major">
+								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 <!-- 
 							<section id="second" class="main special">
@@ -121,7 +127,10 @@
 							<section id="contact" class="main special">
 								<header class="major">
 									<h2>Contact</h2>
-									<p>We are happy to reply back quickly through <a href="#"> EMAIL </a>, <a href="#"> Telegram chat </a>, or <a href="#"> Whatsapp </a>.</p>
+									<p>We are happy to reply back quickly through <a href="#" style="font-weight: bold; color: #6495ED;"> Email </a>, <a
+											href="#" style="font-weight: bold; color: #6495ED;"> Telegram messenger </a>, or <a href="#"
+											style="font-weight: bold; color: #6495ED;"> WhatsApp </a>.</p>
+
 								</header>
 								<!-- <footer class="major">
 									<ul class="actions special">
@@ -146,7 +155,7 @@
 							<h2>Where to find us</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>Somewhere street 000 &bull; 8000 Zurich, &bull; Switzerland </dd>
 								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
