--- a/services.html
+++ b/services.html
@@ -29,30 +29,28 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Unmatched Expertise: The Pillars of XquisiteModel</h2>
-								<p>At XquisiteModel, we bring a powerful blend of expertise and experience to propel your research to new heights. Our team is helmed by professionals with a diverse range of proficiencies, from modeling intricate dynamical systems to	genomic data analysis. Ali Vahdati, with a decade of experience in visualization, scientific writing, and both deterministic and probabilistic modeling, joins forces with Carlos Melian, a distinguished professor at Eawag (Swiss Federal Institute of Aquatic Science and Technology), who offers deep insights into evolution and ecology, as well as model design. With a broad base of knowledge in statistical and experimental design consultancy, our team is perfectly equipped to take your research endeavors from conception to completion.</p>
+								<h2>Unmatched Expertise: The Pillars of XpertModel</h2>
+								<p>At XpertModel, we bring a powerful blend of expertise and experience to propel your research to new heights. Our team is helmed by professionals with a diverse range of proficiencies, from modeling intricate dynamical systems to	genomic data analysis. Ali Vahdati, with a decade of experience in visualization, scientific writing, and both deterministic and probabilistic modeling, joins forces with Carlos Melian, a distinguished professor at Eawag (Swiss Federal Institute of Aquatic Science and Technology), who offers deep insights into evolution and ecology, as well as model design. With a broad base of knowledge in statistical and experimental design consultancy, our team is perfectly equipped to take your research endeavors from conception to completion.</p>
 								<h2>Innovation in Analytics: Our Data-driven Approach</h2>
 								<p>Our suite of services is all-encompassing and innovative. At the heart of our offering is data analytics, employing a blend of statistics, mathematical modeling, and machine learning. Our proficiency with open-source packages like Julia, Python, and R is unrivaled, ensuring we extract every iota of value from your data. We utilize container-based workflows, which not only allow for easy integration and deployment on the cloud but also guarantee reproducible results. This unique approach eliminates redundancy, maximizes efficiency, and fosters collaborative work environments. Additionally, our agent-based modeling service can simulate complex systems and predict their behavior, providing valuable insight and helping to inform decision-making.</p>
 								<h2>Beyond Analytics: Our Comprehensive Service Portfolio</h2>
-								<p>But our services extend beyond just analytics. We also provide scientific writing, including research papers and grant proposals, to help disseminate your findings and secure the funding necessary to continue your research. Plus, our training and teaching services cater to a wide range of needs, from programming to reproducible research, experimental design, and even specialized fields such as evolutionary biology and ecology. By empowering your team with the tools and techniques to tackle the challenges of today's research landscape, we ensure that our partnership is not just about meeting your immediate needs, but about building capacity for your future endeavors. Choose XquisiteModel, and let us help turn your scientific curiosity into breakthrough discoveries.</p>
+								<p>But our services extend beyond just analytics. We also provide scientific writing, including research papers and grant proposals, to help disseminate your findings and secure the funding necessary to continue your research. Plus, our training and teaching services cater to a wide range of needs, from programming to reproducible research, experimental design, and even specialized fields such as evolutionary biology and ecology. By empowering your team with the tools and techniques to tackle the challenges of today's research landscape, we ensure that our partnership is not just about meeting your immediate needs, but about building capacity for your future endeavors. Choose XpertModel, and let us help turn your scientific curiosity into breakthrough discoveries.</p>
 							</section>
 
 					</div>
 
 				<!-- Footer -->
 				<footer id="footer">
-					<!-- <section>
-											<h2>Aliquam sed mauris</h2>
-											<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn More</a></li>
-											</ul>
-										</section> -->
+					<section>
+							<ul class="actions  center-align">
+								<li><a href="index.html" class="button">Home</a></li>
+							</ul>
+						</section>
 					<section>
 						<h2>Where to find us</h2>
 						<dl class="alt">
 							<dt>Address</dt>
-							<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+							<dd>Somewhere street 000 &bull; 8000 Zurich, &bull; Switzerland </dd>
 							<dt>Phone</dt>
 							<dd>(000) 000-0000 x 0000</dd>
 							<dt>Email</dt>
