--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 											<li><a href="services.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
 								</div>
 							</section>
 
@@ -59,7 +59,9 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<div class="icon-container">
+										<span class="icon solid major style1"><img src="images/ali.png" alt="Ali R. Vahdati"></span>
+										</div>
 										<h3>Ali R. Vahdati, PhD</h3>
 										<p>leads our modeling and analytics department, leveraging a decade of experience in complex dynamical systems, genomic data analysis, and both deterministic and probabilistic modeling to provide precise, actionable insights from each data set.</p>
 										<ul class="actions fit small">
@@ -67,8 +69,10 @@
 										</ul>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Carlos C. Melian, PhD</h3>
+										<div class="icon-container">
+											<span class="icon solid major style1"><img src="images/carlos.png" alt="Carlos J. Melian"></span>
+										</div>
+										<h3>Carlos Melian, PhD</h3>
 										<p>serving as our statistics and modeling advisor, provides crucial expertise in experimental design and teaching, ensuring that our data-driven methodologies are strategically aligned and our educational programs are comprehensively structured. </p>
 										<ul class="actions fit small">
 											<li><a href="https://scholar.google.com/citations?user=rhHQRswAAAAJ" target="_blank" class="button primary fit">More about Carlos</a></li>
