--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
 								<h2>Unmatched Expertise: The Pillars of XpertModel</h2>
 								<p>At XpertModel, we bring a powerful blend of expertise and experience to propel your research to new heights. Our team is helmed by professionals with a diverse range of proficiencies, from modeling intricate dynamical systems to	genomic data analysis. Ali Vahdati, with a decade of experience in visualization, scientific writing, and both deterministic and probabilistic modeling, joins forces with Carlos Melian, a distinguished professor at Eawag (Swiss Federal Institute of Aquatic Science and Technology), who offers deep insights into evolution and ecology, as well as model design. With a broad base of knowledge in statistical and experimental design consultancy, our team is perfectly equipped to take your research endeavors from conception to completion.</p>
 								<h2>Innovation in Analytics: Our Data-driven Approach</h2>
