make services centered

--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
 					<div id="main">
 
 						<!-- Services -->
-							<section id="services" class="main">
+							<section id="services" class="main special">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
 											<h2>Services</h2>
 										</header>
-										<p>Data analysis, Statistical analysis, Data visualization,
-										 Population genetics, Evolutionary biology, Ecology, Bioinformatics</p>
-										<ul class="actions">
+										<p>Data analysis<br>
+											Statistical analysis<br>
+											Data visualization<br>
+											Population genetics<br>
+											Evolutionary biology<br>
+											Ecology<br>
+											Bioinformatics</p>
+
+										<ul class="actions special">
 											<li><a href="services.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
