--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<div class="icon-container">
 										<span class="icon solid major style1"><img src="images/ali.png" alt="Ali R. Vahdati"></span>
 										</div>
-										<h3>Ali R. Vahdati, PhD</h3>
+										<h3>Dr. Ali R. Vahdati</h3>
 										<p>leads our modeling and analytics department, leveraging a decade of experience in complex dynamical systems, genomic data analysis, and both deterministic and probabilistic modeling to provide precise, actionable insights from each data set.</p>
 										<ul class="actions fit small">
 											<li><a href="https://vahdati.info" target="_blank" class="button primary fit">More about Ali</a></li>
@@ -78,7 +78,7 @@
 										<div class="icon-container">
 											<span class="icon solid major style1"><img src="images/carlos.png" alt="Carlos J. Melian"></span>
 										</div>
-										<h3>Carlos Melian, PhD</h3>
+										<h3>Prof. Dr. Carlos Melian</h3>
 										<p>serving as our statistics and modeling advisor, provides crucial expertise in experimental design and teaching, ensuring that our data-driven methodologies are strategically aligned and our educational programs are comprehensively structured. </p>
 										<ul class="actions fit small">
 											<li><a href="https://scholar.google.com/citations?user=rhHQRswAAAAJ" target="_blank" class="button primary fit">More about Carlos</a></li>
