--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/XpertModel_logo.svg" alt="" /></span>
 						<h1>XpertModel</h1>
-						<p>Scientific modeling and data analysis consultancy</p>
+						<p>Bridging Science and Data: Your Swiss Consultancy for Advanced Modeling and Analytics</p>
 						<!-- <br />
 						more text</p> -->
 					</header>
