--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>XpertModel consultancy</title>
+		<title>SwissBridge consultancy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/XpertModel_logo.svg" alt="" /></span>
-						<h1>XpertModel</h1>
+						<h1>SwissBridge</h1>
 						<p>Bridging Science and Data: Your Swiss Consultancy for Advanced Modeling and Analytics</p>
 						<!-- <br />
 						more text</p> -->
@@ -179,7 +179,7 @@
 								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 							</ul>
 						</section>
-						<p class="copyright">&copy; XpertModel.</p>
+						<p class="copyright">&copy; SwissBridge.</p>
 					</footer>
 
 			</div>
