--- a/elements.html
+++ b/elements.html
@@ -372,7 +372,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; SwissBridge.</p>
+						<p class="copyright">&copy; Helvetia Analytics.</p>
 					</footer>
 
 			</div>
