--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
 							<section id="contact" class="main special">
 								<header class="major">
 									<h2>Contact</h2>
-									<p>We are happy to reply back quickly through <a href="#" style="font-weight: bold; color: #6495ED;"> Email </a>, <a
-											href="#" style="font-weight: bold; color: #6495ED;"> Telegram messenger </a>, or <a href="#"
-											style="font-weight: bold; color: #6495ED;"> WhatsApp </a>.</p>
+									<p>We are happy to reply back quickly through <a href="mailto:info@HelvetiaAnalytics.ch" style="font-weight: bold; color: #6495ED;"> Email </a> and <a
+											href="https://t.me/helvetiaanalytics" style="font-weight: bold; color: #6495ED;"> Telegram messenger </a> </a>.</p>
 
 								</header>
 								<!-- <footer class="major">
@@ -162,20 +161,20 @@
 							</ul>
 						</section> -->
 						<section>
-							<h2>Where to find us</h2>
+							<h2>Contact us</h2>
 							<dl class="alt">
-								<dt>Address</dt>
+								<!-- <dt>Address</dt>
 								<dd>Somewhere street 000 &bull; 8000 Zurich, &bull; Switzerland </dd>
 								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dt>Email</dt> -->
+								<dd><a href="#">info@HelvetiaAnalytics.ch</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
-								<li><a href="#" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
+								<li><a href="https://t.me/helvetiaanalytics" class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 							</ul>
 						</section>
