--- a/services.html
+++ b/services.html
@@ -39,33 +39,35 @@
 
 					</div>
 
-				<!-- Footer -->
-				<footer id="footer">
-					<section>
-							<ul class="actions  center-align">
-								<li><a href="index.html" class="button">Home</a></li>
+					<footer id="footer">
+						<!-- <section>
+												<h2>Aliquam sed mauris</h2>
+												<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+												<ul class="actions">
+													<li><a href="generic.html" class="button">Learn More</a></li>
+												</ul>
+											</section> -->
+						<section>
+							<h2>Contact us</h2>
+							<dl class="alt">
+								<!-- <dt>Address</dt>
+													<dd>Somewhere street 000 &bull; 8000 Zurich, &bull; Switzerland </dd>
+													<dt>Phone</dt>
+													<dd>(000) 000-0000 x 0000</dd>
+													<dt>Email</dt> -->
+								<dd><a href="#">info@HelvetiaAnalytics.ch</a></dd>
+							</dl>
+							<ul class="icons">
+								<li><a href="https://t.me/helvetiaanalytics" class="icon brands fa-telegram alt"><span
+											class="label">Telegram</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 							</ul>
 						</section>
-					<section>
-						<h2>Where to find us</h2>
-						<dl class="alt">
-							<dt>Address</dt>
-							<dd>Somewhere street 000 &bull; 8000 Zurich, &bull; Switzerland </dd>
-							<dt>Phone</dt>
-							<dd>(000) 000-0000 x 0000</dd>
-							<dt>Email</dt>
-							<dd><a href="#">information@untitled.tld</a></dd>
-						</dl>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
-							<li><a href="#" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
-							<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
-						</ul>
-					</section>
-					<p class="copyright">&copy; Helvetia Analytics.</p>
-				</footer>
+						<p class="copyright">&copy; Helvetia Analytics.</p>
+					</footer>
 
 			</div>
 
