--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/XpertModel_logo.svg" alt="" /></span>
 						<h1>Helvetia Analytics</h1>
-						<p>Bridging Science and Data: Your Swiss Consultancy for Advanced Modeling and Analytics</p>
+						<p>Your Consultancy for Advanced Modeling and Analytics</p>
 						<!-- <br />
 						more text</p> -->
 					</header>
@@ -42,13 +42,20 @@
 										<header class="major">
 											<h2>Services</h2>
 										</header>
-										<p>Data analysis<br>
-											Statistical analysis<br>
-											Data visualization<br>
-											Population genetics<br>
-											Evolutionary biology<br>
-											Ecology<br>
-											Bioinformatics</p>
+										<p>We offer end-to-end research consultancy services, from intricate data analysis and predictive modeling to scientific writing and specialized training. Services include:</p>
+										
+										<p>GENERAL TOPICS<br>
+										Data analysis<br>
+										Statistical analysis<br>
+										Data visualization<br>
+										Complex simulations<br>
+										Bioinformatics<br>
+										Ecoinformatics</p>
+										
+										<p>SPECIALIZED TOPICS<br>
+										Population genetics<br>
+										Evolutionary biology<br>
+										Ecology</p>
 
 										<ul class="actions special">
 											<li><a href="services.html" class="button">Learn More</a></li>
@@ -63,6 +70,7 @@
 								<header class="major">
 									<h2>Team</h2>
 								</header>
+								<p>Our team boasts a unique blend of skills in modeling complex systems, data analysis, ecological and evolutionary knowledge, and more.</p>
 								<ul class="features">
 									<li>
 										<div class="icon-container">
@@ -78,8 +86,8 @@
 										<div class="icon-container">
 											<span class="icon solid major style1"><img src="images/carlos.png" alt="Carlos J. Melian"></span>
 										</div>
-										<h3>Prof. Dr. Carlos Melian</h3>
-										<p>serving as our statistics and modeling advisor, provides crucial expertise in experimental design and teaching, ensuring that our data-driven methodologies are strategically aligned and our educational programs are comprehensively structured. </p>
+										<h3>Dr. Carlos Melian</h3>
+										<p>serving as our statistics and modeling advisor, provides expertise in experimental design, ensuring that our data-driven methodologies and modeling are aligned to problem solving in complex data structures. </p>
 										<ul class="actions fit small">
 											<li><a href="https://scholar.google.com/citations?user=rhHQRswAAAAJ" target="_blank" class="button primary fit">More about Carlos</a></li>
 										</ul>
@@ -136,9 +144,10 @@
 						<!-- Contact -->
 							<section id="contact" class="main special">
 								<header class="major">
-									<h2>Contact</h2>
+									<h2>Schedule a Consultation Today</h2>
 									<p>We are happy to reply back quickly through <a href="mailto:info@HelvetiaAnalytics.ch" style="font-weight: bold; color: #6495ED;"> Email </a> and <a
 											href="https://t.me/helvetiaanalytics" style="font-weight: bold; color: #6495ED;"> Telegram messenger </a> </a>.</p>
+										<p>Unsure about your specific needs? Reach out to us for a free, no-obligation initial consultation. We're here to help you	navigate your way to the most effective research solutions tailored just for you.</p>
 
 								</header>
 								<!-- <footer class="major">
