--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<header class="major">
 											<h2>Services</h2>
 										</header>
-										<p>We offer end-to-end research consultancy services, from intricate data analysis and predictive modeling to scientific writing and specialized training. Services include:</p>
+										<p>We offer end-to-end research consultancy services, from complex data analysis and predictive modeling to scientific writing and specialized training. Services include:</p>
 										
 										<p>GENERAL TOPICS<br>
 										Data analysis<br>
