--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
 											<li><a href="https://scholar.google.com/citations?user=rhHQRswAAAAJ" target="_blank" class="button primary fit">More about Carlos</a></li>
 										</ul>
 									</li>
+									<li>
+										<div class="icon-container">
+											<span class="icon solid major style1"><img src="images/jody.png" alt="John David Weissmann"></span>
+										</div>
+										<h3>Dr. John David Weissmann</h3>
+										<p>with over 15 years of software engineering experience and expertise in C++,
+										Python, Linux systems, parallel computing, databases, and web technologies, John is highly skilled at developing complex software solutions. </p>
+										<ul class="actions fit small">
+											<li><a href="jody.html" target="_blank" class="button primary fit">More about John</a></li>
+										</ul>
+									</li>
 									<!-- <li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Dolor nullam</h3>
